--- a/config/defaultworldtype/client-config.toml
+++ b/config/defaultworldtype/client-config.toml
@@ -1,4 +1,7 @@
 [world-type]
 #Type in the name from the world type which should be selected by default.
 world-type = "botania-skyblock"
+#Type in a valid generation setting for flat world type.
+#Only works if world-type if 'flat'.
+flat-settings = "minecraft:bedrock,2*minecraft:dirt,minecraft:grass_block;minecraft:plains"
 
