--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "version": "4.2.0",
     "author": "MelanX",
     "projectID": 275351,
-    "name": "Garden of Glass (Questbook Edition)\n",
+    "name": "Garden of Glass (Questbook Edition)",
     "files": [
         {
             "_displayName": "A Block of Charcoal",
