--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
         "version": "1.16.5",
         "modLoaders": [
             {
-                "id": "forge-36.0.42",
+                "id": "forge-36.0.45",
                 "primary": true
             }
         ]
@@ -14,7 +14,7 @@
     "version": "4.2.0",
     "author": "MelanX",
     "projectID": 275351,
-    "name": "Garden of Glass (Questbook Edition)\n",
+    "name": "Garden of Glass (Questbook Edition)",
     "files": [
         {
             "_displayName": "A Block of Charcoal",
