re-enable voided nether

--- a/config/skyblockbuilder/config.toml
+++ b/config/skyblockbuilder/config.toml
@@ -14,7 +14,7 @@
 
 	[dimensions.nether]
 		#Should nether generate as in default world type? [default: false]
-		default = true
+		default = false
 
 	[dimensions.end]
 		#Should end generate as in default world type? [default: false]
