--- a/kubejs/config/common.properties
+++ b/kubejs/config/common.properties
@@ -1,6 +1,7 @@
 #KubeJS Common Properties
-#Thu Mar 04 21:54:40 CET 2021
-hideServerScriptErrors=false
+#Sat May 29 09:10:24 CEST 2021
+packmode=default
 enableES6=true
+hideServerScriptErrors=false
 announceReload=false
 serverOnly=false
